last moment updates

--- a/clientSurvey/views/survey/general.view.html
+++ b/clientSurvey/views/survey/general.view.html
@@ -2,16 +2,16 @@
     <div class="col-md-12">
         <div class="block wow fadeInUp" data-wow-delay=".3s">
             <section class="cd-intro text-center">
-                <h1>Section 1</h1>
+                <h1>General Questions</h1>
             </section>
             <h2 align="left">Question 1: What is your technical team’s preferred development platform? (select all that apply)               <div class="checkbox" >
-                <label><input type="checkbox" name="optradio1" ng-model="opt11" ng-true-value="'Pentaho,Informatica,Talend,SkyTree,Sqoop,Zookeeper,NiFi,MapReduce,Hadoop,Storm,Spark,Flink,Peregrine,Gridgain,Samza,Avro,RaptorDB,CouchBase,Redis,OrientDB,Neo4j,MongoDB,MarkLogic,HyperTable,Hbase,Cassandra,OrientDB,MarkLogic,Terrastore,Datastax,RaptorDB,DynamoDB'">Windows</label>
+                <label><input type="checkbox" name="optradio1" ng-model="opt11" ng-true-value="'Pentaho,Informatica,Talend,SkyTree,Sqoop,Zookeeper,NiFi,MapReduce,Hadoop,Storm,Spark,Flink,Peregrine,Gridgain,Samza,Avro,RaptorDB,CouchBase,Redis,OrientDB,Neo4j,MongoDB,MarkLogic,HyperTable,Hbase,Cassandra,Terrastore,Datastax,DynamoDB,Couchdb,CartoDb'">Windows</label>
             </div>
                 <div class="checkbox">
-                    <label><input type="checkbox" name="optradio1" ng-model="opt12" ng-true-value="'Pentaho,Informatica,Sqoop,Zookeeper,Flume,NiFi,MapReduce,Hadoop,Storm,Spark,Gridgain,Gluster,Avro,OrientDB,Neo4j,Datastax,MongoDB,OracleNoSQL,CouchBase,Redis,MarkLogic,Terrastore,Datastax,DynamoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra'">Linux</label>
+                    <label><input type="checkbox" name="optradio1" ng-model="opt12" ng-true-value="'Pentaho,Informatica,Sqoop,Zookeeper,Flume,NiFi,MapReduce,Hadoop,Storm,Spark,Gridgain,Gluster,Avro,OrientDB,Neo4j,Datastax,MongoDB,OracleNoSQL,CouchBase,Redis,MarkLogic,Terrastore,DynamoDB,HyperTable,Accumulo,Hbase,Cassandra,CartoDb,Couchdb'">Linux</label>
                 </div>
                 <div class="checkbox">
-                    <label><input type="checkbox" name="optradio1" ng-model="opt13" ng-true-value="'Pentaho,Talend,SkyTree,Sqoop,Zookeeper,Flume,NiFi,MapReduce,Hadoop,Storm,Spark,Flink,Gridgain,Samza,Gluster,OrientDB, Neo4j, Datastax, MongoDB,RaptorDB, CouchBase, Redis,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra,RethinkDB,Terrastore,DynamoDB,CouchBase'">Mac OS</label>
+                    <label><input type="checkbox" name="optradio1" ng-model="opt13" ng-true-value="'Pentaho,Talend,SkyTree,Sqoop,Zookeeper,Flume,NiFi,MapReduce,Hadoop,Storm,Spark,Flink,Gridgain,Samza,Gluster,OrientDB,Neo4j,Datastax,MongoDB,RaptorDB,CouchBase,Redis,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra,RethinkDB,Terrastore,DynamoDB,Couchdb,CartoDb'">Mac OS</label>
                 </div>
                 <div class="checkbox">
                     <label><input type="checkbox" name="optradio1" ng-model="opt14" ng-true-value="'Pentaho,Talend,Sqoop,Zookeeper,Flume,NiFi,Gridgain,Gluster'">Unix</label>
@@ -46,32 +46,31 @@
                 <div class="checkbox">
                     <label><input type="checkbox" name="optradio1" ng-model="opt29" ng-true-value="'Datastax,Dynamodb,CartoDb'">Ruby</label>
                 </div>
-            </h2>
-            <br>
-            <h2 align="left">Question 3: Do you require real-time, batch, or both?)
-                <div class="checkbox" >
-                    <label><input type="checkbox" name="optradio1" ng-model="opt31" ng-true-value="'Pentaho,Informatica,Talend,SkyTree,Sqoop,Flume,Samza,Flink,Redis,CouchBase,Cassandra,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra'">Both</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" name="optradio1" ng-model="opt32" ng-true-value="'NiFi,Zookeeper'">Batch-only</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" name="optradio1" ng-model="opt33" ng-true-value="'Pentaho,Informatica,Talend,SkyTree,Sqoop,Flume,Storm,Spark,Hadoop,Redis,CouchBase,Cassandra,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra'">Real-Time</label>
-                </div>
-            </h2>
-            <br>
-            <h2 align="left">Question 4: Do you want to use an open-source product?
-                <div class="checkbox" >
-                    <label><input type="checkbox" name="optradio1" ng-model="opt41" ng-true-value="'Talend,Pentaho,Sqoop,Zookeeper,Flume,Nifi,MapReduce,Hadoop,Storm,Spark,Peregrine,Gridgain,Samza,Avro,Tigion,Redis,CouchBase,OracleNoSQL,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,MongoDB,HyperTable,Accumulo,Hbase,Cassandra'">Both</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" name="optradio1" ng-model="opt42" ng-true-value="'Informatica,Talend,Skytree,Flink,Gluster'">Batch-only</label>
-                </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" name="optradio1" ng-model="opt43" ng-true-value="''">Not sure/Doesn’t matter</label>
-                </div>
-            </h2>
-            <br>
+                <br>
+                <h2 align="left">Question 3: DO YOU REQUIRE REAL-TIME, BATCH, OR BOTH?)
+                    <div class="radio" >
+                        <label><input type="radio" name="optradio2" ng-model="opt3" value="Pentaho,Informatica,Talend,SkyTree,Sqoop,Flume,Samza,Flink,Redis,CouchBase,Cassandra,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra,CartoDb">BOTH</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio2" ng-model="opt3" value="NiFi,Zookeeper">BATCH-ONLY</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio2" ng-model="opt3" value="Pentaho,Informatica,Talend,SkyTree,Sqoop,Flume,Storm,Spark,Hadoop,Redis,CouchBase,Cassandra,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra,CartoDb">REAL-TIME</label>
+                    </div>
+                </h2>
+                <br>
+                <h2 align="left">Question 4: Do you want to use an open-source product?
+                    <div class="radio" >
+                        <label><input type="radio" name="optradio2" ng-model="opt4" value="Talend,Pentaho,Sqoop,Zookeeper,Flume,Nifi,MapReduce,Hadoop,Storm,Spark,Peregrine,Gridgain,Samza,Avro,Tigion,Redis,CouchBase,OracleNoSQL,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,MongoDB,HyperTable,Accumulo,Hbase,Cassandra,CartoDb,Couchdb">Yes</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio2" ng-model="opt4" value="Informatica,Talend,Skytree,Flink,Gluster">No</label>
+                    </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optradio2" ng-model="opt4" value="">Not sure/Doesn’t matter</label>
+                    </div>
+                </h2>
+                <br>
             <h2 align="left'">Question 5: What is the expected growth rate of your data? (level of scalability)
                 <div class="checkbox" >
                     <label><input type="checkbox" name="optradio1" ng-model="opt51" ng-true-value="'Pentaho,Informatica,Talend,SkyTree,MapReduce,Spark,Hadoop,Storm,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra'">High</label>
