--- a/clientSurvey/views/survey/section3.view.html
+++ b/clientSurvey/views/survey/section3.view.html
@@ -4,7 +4,7 @@
             <section class="cd-intro text-center">
                 <h1>Section 3</h1>
             </section>
-            <h2 align="left">Question 38: What is the expected Data volume for your application?
+            <h2 align="left">Question 35: What is the expected Data volume for your application?
 
                 <div class="radio" >
                     <label><input type="radio" name="optradio38" ng-model="opt38"
@@ -12,7 +12,7 @@
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio38" ng-model="opt38"
-                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,RaptorDB,DynamoDB,CouchBase,MongoDB,Neo4j">Large(PetaBytes)</label>
+                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,RaptorDB,DynamoDB,CouchBase,MongoDB,Neo4j,CartoDb,CouchDB">Large(PetaBytes)</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio38" ng-model="opt38"
@@ -20,7 +20,7 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 39: What is the frequency of reads?
+            <h2 align="left">Question 36: What is the frequency of reads?
 
                 <div class="radio" >
                     <label><input type="radio" name="optradio39" ng-model="opt39"
@@ -28,7 +28,7 @@
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio39" ng-model="opt39"
-                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,Neo4j,Cassandra">Large (~ 10 thousands)</label>
+                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB, DynamoDB, CouchBase,CouchDB,MongoDB,Neo4j,Cassandra,CartoDb">Large (~ 10 thousands)</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio39" ng-model="opt39"
@@ -36,15 +36,15 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 40: What is the frequency of writes?
+            <h2 align="left">Question 37: What is the frequency of writes?
 
                 <div class="radio" >
                     <label><input type="radio" name="optradio40" ng-model="opt40"
-                                  value="Redis,CouchBase,OracleNoSQL">Small</label>
+                                  value="Redis,OracleNoSQL">Small</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio40" ng-model="opt40"
-                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,Neo4j,Cassandra">Large</label>
+                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB, DynamoDB, CouchBase,MongoDB,Neo4j,Cassandra,CartoDb,CouchDB">Large</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio40" ng-model="opt40"
@@ -52,19 +52,19 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 41: What is your tolerance for inconsistent data?
+            <h2 align="left">Question 38: What is your tolerance for inconsistent data?
 
                 <div class="radio" >
                     <label><input type="radio" name="optradio41" ng-model="opt41"
-                                  value="Redis,CouchBase,Cassandra,OracleNoSQL,MarkLogic,RethinkDB,Terrastore,RaptorDB,DynamoDB,CouchBase,MongoDB">Conditional</label>
+                                  value="Redis,CouchBase,Cassandra,OracleNoSQL,MarkLogic,RethinkDB,Terrastore,RaptorDB,DynamoDB,MongoDB,CartoDb,CouchDB">Conditional</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio41" ng-model="opt41"
-                                  value="neo4j,OrientDB,DataStax">Low</label>
+                                  value="Neo4j,OrientDB,DataStax">Low</label>
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 42: Does your application involve Complex relationships/interaction between various entities?
+            <h2 align="left">Question 39: Does your application involve Complex relationships/interaction between various entities?
 
                 <div class="radio" >
                     <label><input type="radio" name="optradio42" ng-model="opt42"
@@ -76,7 +76,7 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 43: If your project demand different data model in addition to complex relationships, do you prefer one distributed system rather than having different vendors?
+            <h2 align="left">Question 40: If your project demand different data model in addition to complex relationships, do you prefer one distributed system rather than having different vendors?
                 <div class="radio" >
                     <label><input type="radio" name="optradio43" ng-model="opt43"
                                   value="Datastax,OrientDB">Yes</label>
@@ -87,36 +87,36 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 44: What is the need for high query capabilities to extract data?
+            <h2 align="left">Question 41: What is the need for high query capabilities to extract data?
                 <div class="radio" >
                     <label><input type="radio" name="optradio44" ng-model="opt44"
                                   value="Redis,CouchBase,Cassandra,OracleNoSQL">Low</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio44" ng-model="opt44"
-                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra,Datastax,OrientDB,Neo4j">High</label>
+                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB, CouchBase,MongoDB,MarkLogic,HyperTable,Accumulo,Hbase,Cassandra,Datastax,OrientDB,Neo4j,CartoDb,CouchDB">High</label>
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 45: What is the type of data that you will be using for your project?
+            <h2 align="left">Question 42: What is the type of data that you will be using for your project?
                 <div class="radio" >
                     <label><input type="radio" name="optradio45" ng-model="opt45"
-                                  value="Redis,CouchBase,Cassandra,OracleNoSQL,Datastax,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,HyperTable,Accumulo,Hbase,Cassandra">Structured(Excel,Relational)</label>
+                                  value="Redis,Cassandra,OracleNoSQL,Datastax,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,HyperTable,Accumulo,Hbase,Cassandra">Structured(Excel,Relational)</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio45" ng-model="opt45"
-                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB">Semi-Structured (JSON,XML)</label>
+                                  value="OrientDB,MarkLogic,RethinkDB,CouchDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase,MongoDB,CartoDb">Semi-Structured (JSON,XML)</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio45" ng-model="opt45"
-                                  value="OrientDB,MarkLogic,RethinkDB,Terrastore,RaptorDB,DynamoDB,MongoDB,Neo4j,Redis,CouchBase,OracleNoSQL,Datastax,HyperTable,Accumulo,Hbase,Cassandra">Unstructured (WebSite, images, social media)</label>
+                                  value="Redis,OracleNoSQL,Datastax,OrientDB,MarkLogic,RethinkDB,Terrastore,Datastax,RaptorDB,CouchBase,MongoDB,HyperTable,Accumulo,Hbase,Cassandra,CouchDB,DynamoDB,CartoDb">Unstructured (WebSite, images, social media)</label>
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 46: Are you willing to consider/deploy on cloud options?
+            <h2 align="left">Question 43: Are you willing to consider/deploy on cloud options?
                 <div class="radio" >
                     <label><input type="radio" name="optradio46" ng-model="opt46"
-                                  value="Redis,CouchBase,Cassandra,OracleNoSQL,MarkLogic,RethinkDB,Terrastore,Datastax,DynamoDB,CouchBase,MongoDB,MarkLogic,OrientDB,Neo4j">Yes</label>
+                                  value="Redis,CouchBase,Cassandra,OracleNoSQL,MarkLogic,RethinkDB,Terrastore,Datastax,DynamoDB,CouchDB,MongoDB,MarkLogic,OrientDB,Neo4j,CartoDb">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio46" ng-model="opt46"
@@ -124,10 +124,10 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 47: Do you need a web interface to operate and manage database?
+            <h2 align="left">Question 44: Do you need a web interface to operate and manage database?
                 <div class="radio" >
                     <label><input type="radio" name="optradio47" ng-model="opt47"
-                                  value="CouchDB,MongoDB,Terrastore,DynamoDB,Marklogic,Accumulo,OrientDB,RethinkDB,Terrastore,Datastax,RaptorDB,DynamoDB,CouchBase">Yes</label>
+                                  value="CouchDB,MongoDB,Terrastore,DynamoDB,Marklogic,Accumulo, OrientDB,RethinkDB,Terrastore,Datastax,RaptorDB,CouchBase,CartoDb">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio47" ng-model="opt47"
@@ -135,10 +135,10 @@
                 </div>
             </h2>
             <br>
-            <h2 align="left">Question 48: The database has APIs and other access methods?
+            <h2 align="left">Question 45: The database has APIs and other access methods?
                 <div class="radio" >
                     <label><input type="radio" name="optradio48" ng-model="opt48"
-                                  value="Redis,Cassandra,OracleNoSQL,OrientDB,MarkLogic,Terrastore,RaptorDB,DynamoDB,CouchBase,MongoDB,HyperTable,Hbase,Cassandra,Datastax">Yes</label>
+                                  value="Redis,Cassandra,OracleNoSQL,OrientDB,MarkLogic,Terrastore,RaptorDB,DynamoDB,CouchBase,MongoDB,HyperTable,Hbase,Cassandra,Datastax,CartoDb,CouchDB">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio48" ng-model="opt48"
