last moment changes 2

--- a/clientSurvey/views/survey/section2.view.html
+++ b/clientSurvey/views/survey/section2.view.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="block wow fadeInUp" data-wow-delay=".3s">
             <section class="cd-intro text-center">
-                <h1>Section 1</h1>
+                <h1>Framework Section</h1>
             </section>
             <h1 align="left">Main Architecture and Design Specific
                 <h2 align="left">Question 24: How many users are expected to use your application?
@@ -16,7 +16,7 @@
                         <label><input type="radio" name="optradio1" ng-model="opt26" value="Mapreduce,Hadoop,Storm,Spark,Flink">1000 – 10000</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optradio1" ng-model="opt26" value="Mapreduce,Hadoop,Storm,Spark,Flink"><10000</label>
+                        <label><input type="radio" name="optradio1" ng-model="opt26" value="Mapreduce,Hadoop,Storm,Spark,Flink">>10000</label>
                     </div>
                 </h2>
                 <br>
