--- a/clientSurvey/views/survey/section3.view.html
+++ b/clientSurvey/views/survey/section3.view.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="block wow fadeInUp" data-wow-delay=".3s">
             <section class="cd-intro text-center">
-                <h1>Section 3</h1>
+                <h1>Database Section</h1>
             </section>
             <h2 align="left">Question 35: What is the expected Data volume for your application?
 
